# ai-expert-system

./: .gitattributes  .gitignore  pyproject.toml
docs/: conflict_resolver_design.md  data_processing_pipeline.md
inference/: CMakeLists.txt  conanfile.txt  vcpkg.json
inference/include/: types.hpp
inference/include/conflict/: ConflictResolver.hpp
inference/src/conflict/: ConflictResolver.cpp
knowledge/: db.py  facts.py  loader.py  rules.py  sessions.py
knowledge/sql/: __init__.sql  reset.sql  seed_rules.sql
